--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,20 +1,21 @@
-FROM python:3.7.3-stretch
+# Dockerfile for Python 3.7.3 with Stretch base image
 
+# Set the author's email address
 LABEL author="long161711@gmail.com"
 
-# Working Directory
+# Set the working directory inside the container
 WORKDIR /app
 
-# Copy source code to working directory
+# Copy the source code to the working directory
 COPY . /app/
 
 # Install packages from requirements.txt
 # hadolint ignore=DL3013
-RUN pip install  --no-cache-dir --upgrade pip && \
-    pip install  --no-cache-dir --trusted-host pypi.python.org -r requirements.txt
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir --trusted-host pypi.python.org -r requirements.txt
 
-# Expose port 80
+# Expose port 80 to allow incoming connections
 EXPOSE 80
 
-# Run app at container launch
+# Command to run the app when the container is launched
 CMD ["python", "app.py"]
