--- a/k8s/1.0/deployment.yaml
+++ b/k8s/1.0/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: udacity-capstone-project-1-0
+  name: flask-app-1-0
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: udacity-capstone-project
+      app: flask-app
       version: 1-0
   template:
     metadata:
       labels:
-        app: udacity-capstone-project
+        app: flask-app
         version: 1-0
     spec:
       containers:
-        - name: udacity-capstone-project
-          image: longnt2/udacity-capstone-project:1.0
+        - name: flask-app
+          image: longnt2/flask-app:1.0
           ports:
             - containerPort: 80
