--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: udacity-capstone-project-${LABEL_VERSION}
+  name: flask-app-${LABEL_VERSION}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: udacity-capstone-project
+      app: flask-app
       version: ${LABEL_VERSION}
   template:
     metadata:
       labels:
-        app: udacity-capstone-project
+        app: flask-app
         version: ${LABEL_VERSION}
     spec:
       containers:
-      - name: udacity-capstone-project
+      - name: flask-app
         image: ${DOCKER_IMAGE}
         ports:
         - containerPort: 80
