--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: udacity-capstone-project
+  name: flask-app
 spec:
   ports:
   - port: 80
@@ -9,6 +9,6 @@ spec:
     protocol: TCP
     name: http
   selector:
-    app: udacity-capstone-project
+    app: flask-app
     version: ${LABEL_VERSION}
   type: LoadBalancer
